[package]
name = "rookrant_serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.77"
axum = "0.7.4"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.1"
leon = "3.0.0"
log = "0.4.20"
maud = { version = "0.26.0", features = ["axum"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "tls-rustls"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
