[package]
name = "rookrant_serv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.77"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
azure_identity = { version = "0.19.0", features = ["enable_reqwest_rustls"] }
azure_security_keyvault = { version = "0.19.0", features = ["enable_reqwest_rustls"] }
base64 = "0.21.7"
bson = { version = "2.9.0", features = ["chrono-0_4", "serde_with", "serde_with-3"] }
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
cookie = "0.18.0"
env_logger = "0.11.1"
jsonwebtoken = "9.2.0"
lazy-regex = "3.1.0"
leon = "3.0.0"
log = "0.4.20"
maud = { version = "0.26.0", features = ["axum"] }
mongodb = { version = "2.8.1", features = ["zstd-compression"] }
oauth2 = "4.4.2"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["trace", "fs"] }
